--- a/index.html
+++ b/index.html
@@ -6,5 +6,58 @@
     <title>Good Food Restaurant</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- hero section -->
+    <section>
+      <div class="hero">
+        <div class="hero-content">
+          <h3 class="sub-title">Savor the Flavors</h3>
+          <h1 class="title">Experience Culinary Excellence Food Experience</h1>
+          <p class="hero-text">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock
+          </p>
+          <button class="btn">Shop The Hotest Food</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="card-container">
+        <div class="card-text">
+          <h3 class="sub-title">Favorite Brands</h3>
+          <h1 class="title">Your Favorite Brands Food Are Now On Sale</h1>
+        </div>
+        <div class="card-content">
+          <div class="card">
+            <img src="/assets/pizza.png" alt="" />
+            <button class="card-btn">Pizza Burg</button>
+            <h2>Up To 50% Off</h2>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+            </p>
+          </div>
+          <div class="card">
+            <img src="/assets/pizza.png" alt="" />
+            <button class="card-btn">Pizza Burg</button>
+            <h2>Up To 50% Off</h2>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+            </p>
+          </div>
+          <div class="card">
+            <img src="/assets/pizza.png" alt="" />
+            <button class="card-btn">Pizza Burg</button>
+            <h2>Up To 50% Off</h2>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+            </p>
+          </div>
+        </div>
+        <div class="btn-box">
+          <button class="btn">Watch All Sells</button>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
