add another section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
       </div>
     </section>
+    <!-- card section -->
     <section>
       <div class="card-container">
         <div class="card-text">
@@ -38,16 +39,16 @@
             </p>
           </div>
           <div class="card">
-            <img src="/assets/pizza.png" alt="" />
-            <button class="card-btn">Pizza Burg</button>
+            <img src="/assets/biriyani.png" alt="" />
+            <button class="card-btn">Kacchi Bhai</button>
             <h2>Up To 50% Off</h2>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
             </p>
           </div>
           <div class="card">
-            <img src="/assets/pizza.png" alt="" />
-            <button class="card-btn">Pizza Burg</button>
+            <img src="/assets/burger.png" alt="" />
+            <button class="card-btn">Burger King</button>
             <h2>Up To 50% Off</h2>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
@@ -56,6 +57,78 @@
         </div>
         <div class="btn-box">
           <button class="btn">Watch All Sells</button>
+        </div>
+      </div>
+    </section>
+    <!-- about us -->
+    <section>
+      <div class="about-us">
+        <div class="about-img">
+          <img src="/assets/foods.png" alt="" />
+        </div>
+        <div class="about-info">
+          <div class="info">
+            <h2 class="title">
+              We always make sure to provide you with good food
+            </h2>
+            <p class="sub-title">
+              Don’t miss a thing! Subscribe to our newsletter
+            </p>
+            <span class="sub-title">Follow Us On</span>
+          </div>
+          <div class="social-icon">
+            <a href="www.facebook.com">
+              <img src="/assets/facebook_5968764.png" alt="facebook_5968764" />
+            </a>
+            <a href="www.instragram.com"
+              ><img src="/assets/instagram_4138124.png" alt="instagram_4138124"
+            /></a>
+            <a href="www.pinterest.com"
+              ><img src="/assets/pinterest_3536559.png" alt="pinterest_3536559"
+            /></a>
+            <a href="www.twitter.com"
+              ><img src="/assets/twitter_5968830.png" alt="twitter_5968830"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer  -->
+    <section>
+      <div class="footer">
+        <div class="opacity">
+          <div class="about-info">
+            <div class="info">
+              <h2 class="title">
+                We always make sure to provide you with good food
+              </h2>
+              <p class="sub-title">
+                Don’t miss a thing! Subscribe to our newsletter
+              </p>
+              <span class="sub-title">Follow Us On</span>
+            </div>
+            <div class="social-icon">
+              <a href="www.facebook.com">
+                <img
+                  src="/assets/facebook_5968764.png"
+                  alt="facebook_5968764"
+                />
+              </a>
+              <a href="www.instragram.com"
+                ><img
+                  src="/assets/instagram_4138124.png"
+                  alt="instagram_4138124"
+              /></a>
+              <a href="www.pinterest.com"
+                ><img
+                  src="/assets/pinterest_3536559.png"
+                  alt="pinterest_3536559"
+              /></a>
+              <a href="www.twitter.com"
+                ><img src="/assets/twitter_5968830.png" alt="twitter_5968830"
+              /></a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
