image path change

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="card-content">
           <div class="card">
-            <img src="/assets/pizza.png" alt="" />
+            <img src="assets/pizza.png" alt="" />
             <button class="card-btn">Pizza Burg</button>
             <h2>Up To 50% Off</h2>
             <p>
@@ -39,7 +39,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/assets/biriyani.png" alt="" />
+            <img src="assets/biriyani.png" alt="" />
             <button class="card-btn">Kacchi Bhai</button>
             <h2>Up To 50% Off</h2>
             <p>
@@ -47,7 +47,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="/assets/burger.png" alt="" />
+            <img src="assets/burger.png" alt="" />
             <button class="card-btn">Burger King</button>
             <h2>Up To 50% Off</h2>
             <p>
@@ -64,7 +64,7 @@
     <section>
       <div class="about-us">
         <div class="about-img">
-          <img src="/assets/foods.png" alt="" />
+          <img src="assets/foods.png" alt="" />
         </div>
         <div class="about-info">
           <div class="info">
@@ -78,16 +78,16 @@
           </div>
           <div class="social-icon">
             <a href="www.facebook.com">
-              <img src="/assets/facebook_5968764.png" alt="facebook_5968764" />
+              <img src="assets/facebook_5968764.png" alt="facebook_5968764" />
             </a>
             <a href="www.instragram.com"
-              ><img src="/assets/instagram_4138124.png" alt="instagram_4138124"
+              ><img src="assets/instagram_4138124.png" alt="instagram_4138124"
             /></a>
             <a href="www.pinterest.com"
-              ><img src="/assets/pinterest_3536559.png" alt="pinterest_3536559"
+              ><img src="assets/pinterest_3536559.png" alt="pinterest_3536559"
             /></a>
             <a href="www.twitter.com"
-              ><img src="/assets/twitter_5968830.png" alt="twitter_5968830"
+              ><img src="assets/twitter_5968830.png" alt="twitter_5968830"
             /></a>
           </div>
         </div>
@@ -109,23 +109,20 @@
             </div>
             <div class="social-icon">
               <a href="www.facebook.com">
-                <img
-                  src="/assets/facebook_5968764.png"
-                  alt="facebook_5968764"
-                />
+                <img src="assets/facebook_5968764.png" alt="facebook_5968764" />
               </a>
               <a href="www.instragram.com"
                 ><img
-                  src="/assets/instagram_4138124.png"
+                  src="assets/instagram_4138124.png"
                   alt="instagram_4138124"
               /></a>
               <a href="www.pinterest.com"
                 ><img
-                  src="/assets/pinterest_3536559.png"
+                  src="assets/pinterest_3536559.png"
                   alt="pinterest_3536559"
               /></a>
               <a href="www.twitter.com"
-                ><img src="/assets/twitter_5968830.png" alt="twitter_5968830"
+                ><img src="assets/twitter_5968830.png" alt="twitter_5968830"
               /></a>
             </div>
           </div>
